[gd_scene load_steps=4 format=3 uid="uid://kxnbtk4c6c6q"]

[ext_resource type="Script" uid="uid://bue6rah33sl1" path="res://Scripts/ui.gd" id="1_w371h"]
[ext_resource type="StyleBox" uid="uid://d0qpprl5m0815" path="res://pressed.tres" id="2_dewlx"]
[ext_resource type="StyleBox" uid="uid://chyknc6i5r8aa" path="res://new_style_box_flat.tres" id="3_hfhsn"]

[node name="Ui" type="Control"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_w371h")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
offset_left = 25.0
offset_top = 15.0
offset_right = 275.0
offset_bottom = 42.0
show_percentage = false

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = 38.0
grow_horizontal = 0
text = "0000"

[node name="PlayerDied" type="Label" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -19.5
offset_right = 62.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "You died!"

[node name="PointsLabel_D" type="Label" parent="PlayerDied"]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 45.0
offset_right = 5.0
offset_bottom = 68.0
grow_horizontal = 0
text = "0000"

[node name="Menu" type="Button" parent="PlayerDied"]
z_index = 1
layout_mode = 0
offset_left = 25.0
offset_top = 125.0
offset_right = 100.0
offset_bottom = 160.0
theme_override_styles/hover = ExtResource("2_dewlx")
theme_override_styles/pressed = ExtResource("2_dewlx")
theme_override_styles/normal = ExtResource("3_hfhsn")
text = "Menu
"

[node name="Replay" type="Button" parent="PlayerDied"]
z_index = 1
layout_mode = 0
offset_left = 25.0
offset_top = 75.0
offset_right = 100.0
offset_bottom = 110.0
theme_override_styles/hover = ExtResource("2_dewlx")
theme_override_styles/pressed = ExtResource("2_dewlx")
theme_override_styles/normal = ExtResource("3_hfhsn")
text = "Replay"

[connection signal="pressed" from="PlayerDied/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PlayerDied/Replay" to="." method="_on_replay_pressed"]
